# aiostream

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: ci.yml
aiostream/: __init__.py  aiter_utils.py  compat.py  concurrent.py  context_utils.py  core.py  manager.py  pipe.py  test_utils.py  utils.py
aiostream/loops/: __init__.py  asyncio.py  trio.py
aiostream/stream/: __init__.py  advanced.py  aggregate.py  combine.py  create.py  misc.py  select.py  time.py  transform.py
docs/: conf.py  core.rst  environment.yml  examples.rst  index.rst  installation.rst  operators.rst  presentation.rst  table.rst.inc  utilities.rst
examples/: custom.py  demo.py  extra.py  norm_server.py  preserve.py  simple.py  trio_demo.py
tests/: conftest.py  test_advanced.py  test_aggregate.py  test_aiter.py  test_combine.py  test_context.py  test_core.py  test_create.py  test_misc.py  test_pipe.py  test_select.py  test_task_group.py  test_time.py  test_transform.py
